fix navigation tiles alignment when no shortcuts

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -24,6 +24,7 @@
     flex-wrap: wrap;
     gap: 3vw;
     padding: 0 4vw 4vw 4vw;
+    flex-grow: 1;
 }
 
 #shortcuts {
@@ -157,13 +158,14 @@
         gap: 3vw;
         padding: 0 3vw;
         width: 63vw;
+        max-width: 93vw;
     }
 
     #shortcuts {
         display: flex;
-        gap: 2.9vw;
+        gap: 3vw;
         padding: 0 3vw;
-        width: 33vw;
+        width: 33.5vw;
         align-content: flex-start;
     }
 
@@ -190,6 +192,7 @@
         gap: 3vw;
         padding: 0 3vw;
         width: 68vw;
+        max-width: 94vw;
     }
 
     #shortcuts {
